# mantenimientos_app

./: .env  .gitignore  main.py  pyproject.toml
static/js/: script.js
templates/: base.html  index.html  mantenimiento_detalle.html  nuevo_reporte.html
word_templates/: plantilla_mantenimiento.docx
