[project]
name = "mantenimientos-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.42.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
